# awesomeness

./: .editorconfig  .markdownlint.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build-docs.yml  tests.yml
docs/: index.md
docs/lists/: block-lists.md  game-development.md  gfx.md  godot.md  golang.md  hardware.md  home-automation.md  javascript.md  kubernetes.md  networking.md  python.md  self-hosted.md  utilities.md  web-development.md
lists/block-lists/: index.html
lists/game-development/: index.html
lists/gfx/: index.html
lists/godot/: index.html
lists/golang/: index.html
lists/hardware/: index.html
lists/home-automation/: index.html
lists/javascript/: index.html
lists/kubernetes/: index.html
lists/networking/: index.html
lists/python/: index.html
lists/self-hosted/: index.html
lists/utilities/: index.html
lists/web-development/: index.html
search/: search_index.json
tags/: index.html
